# project-pharmacy-management-system

./: .gitignore  CMakeLists.txt  PROJECT_EXPLANATION.md  README.md  receipt.txt  resources.qrc
include/: checkout_dialog.h  dashboard_page.h  date.h  inventory_page.h  inventory_service.h  login_dialog.h  main_window.h  medicine.h  medicine_dialog.h  medicine_repository.h  medicine_status.h  order_service.h  orders_page.h  sqlite_medicine_repository.h  text_medicine_repository.h
resources/styles/: app.qss
src/: checkout_dialog.cpp  dashboard_page.cpp  date.cpp  inventory_page.cpp  inventory_service.cpp  login_dialog.cpp  main.cpp  main_window.cpp  medicine.cpp  medicine_dialog.cpp  medicine_status.cpp  order_service.cpp  orders_page.cpp  sqlite_medicine_repository.cpp  text_medicine_repository.cpp
